crates/wasm-cli/tests/snapshots/test__cli_compose_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Compose Wasm components from WAC scripts

Usage: wasm compose [OPTIONS] [FILE]

Arguments:
  [FILE]
          Path to a `.wac` file. If omitted, scans the `seams/` directory

Options:
  -o, --output <OUTPUT>
          Where to write the composed component

          Possible values:
          - build:  Write to the `build/` directory (default)
          - stdout: Write to stdout
          
          [default: build]

      --import-dependencies
          Import dependencies instead of embedding them

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --color <WHEN>
          When to use colored output
          
          [default: auto]
          [possible values: auto, always, never]

      --offline
          Run in offline mode
