crates/wasm-cli/tests/snapshots/test__cli_inspect_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Inspect a Wasm Component

Usage: wasm inspect [OPTIONS] <INPUT>

Arguments:
  <INPUT>  Path to a .wasm to inspect

Options:
      --json     Output in JSON encoding
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
