crates/wasm-cli/tests/snapshots/test__cli_local_list_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
List local WASM files in the current directory

Usage: wasm local list [OPTIONS] [PATH]

Arguments:
  [PATH]  Directory to search for WASM files (defaults to current directory) [default: .]

Options:
      --hidden        Include hidden files and directories
      --follow-links  Follow symbolic links
  -h, --help          Print help
  -V, --version       Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
