crates/wasm-cli/tests/snapshots/test__cli_main_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Unified WebAssembly developer tools

Usage: wasm [OPTIONS] [COMMAND]

Commands:
  run       Execute a Wasm Component
  init      Create a new wasm component in an existing directory
  install   Install a dependency from an OCI registry
  compose   Compose Wasm components from WAC scripts
  local     Detect and manage local WASM files
  registry  Manage Wasm Components and WIT types in OCI registries
  self      Configure the `wasm(1)` tool, generate completions, & manage state
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
